# avn-tier2

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  Updating.md  custom_types.json
.devcontainer/: Dockerfile
.github/workflows/: node-release.yml  pr-checks.yml
dashboard/: README.md  grafana-testnet.json
docker/: .gitignore  Dockerfile  README.md  docker-compose-keystore.yml  docker-compose-local-chain.yml  docker-compose.yml  setup_chain_keystore.sh  subkey.Dockerfile
docker/config/: env.dev  env.sample
docker/monitoring/: docker-compose.yml
docker/monitoring/alerts/: alert-manager-config.yaml.template  alerting-rules.yaml
docker/monitoring/grafana/dashboards/: grafana-testnet-docker.json  substrate-node-template-metrics.json
docker/monitoring/grafana/provisioning/dashboards/: all.yaml
docker/monitoring/grafana/provisioning/datasources/: avn_datasources.yaml
docker/monitoring/prometheus/: prometheus.yml.template
docs/: PULL_REQUEST_TEMPLATE.md
frame/avn/: Cargo.toml
frame/avn-finality-tracker/: Cargo.toml
frame/avn-finality-tracker/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs
frame/avn-offence-handler/: Cargo.toml
frame/avn-offence-handler/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
frame/avn-proxy/: Cargo.toml
frame/avn-proxy/src/: benchmarking.rs  default_weights.rs  lib.rs
frame/avn-proxy/src/tests/: mock.rs  proxy_tests_no_fees.rs  proxy_tests_with_fees.rs
frame/avn/src/: lib.rs  vote.rs  weights.rs
frame/avn/src/tests/: extension_builder.rs  mock.rs  session_handler_tests.rs  testing.rs  tests.rs
frame/ethereum-events/: Cargo.toml
frame/ethereum-events/src/: benchmarking.rs  default_weights.rs  event_parser.rs  lib.rs  mock.rs  offence.rs
frame/ethereum-events/src/tests/: session_handler_tests.rs  test_challenges.rs  test_ethereum_logs.rs  test_event_parser.rs  test_initial_events.rs  test_offchain_worker.rs  test_offchain_worker_calls.rs  test_parse_event.rs  test_process_event.rs  test_proxy_signed_add_ethereum_logs.rs  test_set_ethereum_contract.rs  test_set_event_challenge_period.rs  tests.rs
frame/ethereum-transactions/: Cargo.toml
frame/ethereum-transactions/src/: benchmarking.rs  default_weights.rs  ethereum_transaction.rs  lib.rs  mock.rs
frame/ethereum-transactions/src/tests/: ethereum_transaction_tests.rs  test_set_publish_root_contract.rs  tests.rs  tests_eth_transaction_type.rs  tests_validate_unsigned.rs
frame/nft-manager/: Cargo.toml
frame/nft-manager/src/: batch_nft.rs  benchmarking.rs  default_weights.rs  lib.rs  nft_data.rs
frame/nft-manager/src/tests/: batch_nft_tests.rs  cancel_single_nft_listing_tests.rs  mock.rs  open_for_sale_tests.rs  proxy_signed_cancel_list_fiat_nft_tests.rs  proxy_signed_list_nft_open_for_sale_tests.rs  proxy_signed_mint_single_nft_tests.rs  proxy_signed_transfer_fiat_nft_tests.rs  single_mint_nft_tests.rs  transfer_to_tests.rs
frame/summary/: Cargo.toml
frame/summary/src/: benchmarking.rs  challenge.rs  default_weights.rs  lib.rs  offence.rs  vote.rs
frame/summary/src/tests/: mock.rs  tests.rs  tests_challenge.rs  tests_set_periods.rs  tests_slot_logic.rs  tests_validate_unsigned.rs  tests_vote.rs
frame/token-manager/: Cargo.toml
frame/token-manager/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  test_avt_tokens.rs  test_common_cases.rs  test_non_avt_tokens.rs  test_proxying_signed_lower.rs  test_proxying_signed_transfer.rs
frame/validators-manager/: Cargo.toml
frame/validators-manager/src/: benchmark_utils.rs  benchmarking.rs  default_weights.rs  lib.rs  mock.rs  offence.rs  proxy_helper.rs  tests.rs  tests_voting_deregistration.rs  vote.rs
frame/validators-manager/src/proxy_tests/: bond_extra_tests.rs  bond_tests.rs  common.rs  nominate_tests.rs  rebond_tests.rs  set_controller_tests.rs  set_payee_tests.rs  staking_reward_tests.rs  unbond_tests.rs  withdraw_unbonded_tests.rs
keys/: README.md
primitives/avn-common/: Cargo.toml
primitives/avn-common/src/: event_types.rs  lib.rs  offchain_worker_storage_lock.rs
primitives/avn-common/src/tests/: helpers.rs  nft_event_tests.rs  test_event_types.rs  test_offchain_worker_storage_locks.rs
scripts/: generate-chain-spec.sh  generate-ethk.sh  generate-keys.sh  generate-keystores.sh  install_prerequisites.sh  join-chain.sh  run.sh  sanity_checker.sh  start-chain.sh  start-validator-node.sh
scripts/api/: README.md  analysePrometheusData.js  generateTransactions.js  initialiseAccountBalances.js  package.json  parseGrafanaData.js  parseGrafanaData.sh  simpleTransfer.js
scripts/api/results/: README.md
scripts/api/utils/: apiUtils.js  validationUtils.js
scripts/benchmarking/: README.md  helper.js  package.json  sign_add_ethereum_log.js  sign_avn_proxy.js  sign_cancel_list_fiat_nft_signature.js  sign_list_nft_open_for_sale.js  sign_lower_signature.js  sign_mint_single_nft.js  sign_staking_signature.js  sign_transfer_fiat_nft_signature.js  sign_transfer_ft_signature.js
scripts/configs/: eth-events.json.sample  join-default.json  nodes.json  start-default.json  validator.json
scripts/eth/: generate-ethereum-keys.js  package.json
scripts/mainnet/: create_mainnet_chain_spec.sh  ethereum-events-mainnet.json  ethereum-keys-sample.json
scripts/testnet/: contracts.json  create_testnet_chain_spec.sh
