[package]
name = "pallet-avn-offence-handler"
version = "0.7.0"
authors = ["Aventus Network Services Team"]
edition = "2018"
license = "GPL-3.0"
homepage = "http://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-tier2/"

[dependencies]
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-avn-common = { version = "0.7.0", default-features = false, path = "../../primitives/avn-common" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-staking = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn"  }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
pallet-avn = { version = "0.7.0", default-features = false, path = "../avn" }
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"], git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
pallet-validators-manager = { version = "0.7.0", default-features = false, path = "../validators-manager" }

# Optional imports for benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn", optional = true }

[dev-dependencies]
serde = { version = "1.0.101"}
parking_lot = { version = "0.11.1" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-session/std",
    "pallet-validators-manager/std",
    "pallet-avn/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
