[package]
name = "pallet-avn-proxy"
version = "0.7.0"
authors = ["Aventus Network Services Team"]
edition = "2018"
license = "GPL-3.0"
homepage = "http://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-tier2/"
description = "Process proxy transactions with the ability to charge a fee"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.2.1", default-features = false }
sp-avn-common = { version = "0.7.0", default-features = false, path = "../../primitives/avn-common" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }

# Optional imports for benchmarking
serde = { version = "1.0.101", optional = true }
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn", optional = true }

[dev-dependencies]
sp-io = { version = "3.0.0", git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
sp-keystore = { version = "0.9.0", git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
substrate-test-utils = { version = "3.0.0", git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
pallet-balances = { version = "3.0.0", git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
pallet-nft-manager = { version = "0.7.0", path = "../nft-manager" }
pallet-avn = { version = "0.7.0", path = "../avn" }
parking_lot = { version = "0.11.1" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-avn-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]

