[package]
name = "pallet-ethereum-events"
version = "0.7.0"
authors = ["Aventus Network Services Team"]
edition = "2018"
license = "GPL-3.0"
homepage = "http://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-tier2/"
description = "Process and handle ethereum events"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.2.1", default-features = false }
simple-json2 = { version = "0.1.2", default-features = false, git = 'https://github.com/Aventus-Network-Services/simple-json2', branch = "fixed_dependencies_1.10" }
hex = { version = "0.4", default-features = false }
impl-trait-for-tuples = "0.1.3"
sp-avn-common = { version = "0.7.0", default-features = false, path = "../../primitives/avn-common" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-staking = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
pallet-session = { version = "3.0.0", features = ["historical"], git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn", default-features = false }
sp-application-crypto = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
pallet-avn = { version = "0.7.0", default-features = false, path = "../avn" }
pallet-avn-proxy = { version = "0.7.0", default-features = false, path = "../avn-proxy" }

# Optional imports for benchmarking
serde = { version = "1.0.101", optional = true }
parking_lot = { version = "0.11.1", optional = true }
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn", optional = true }

[dev-dependencies]
pallet-timestamp = { version = "3.0.0", git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
substrate-test-utils = { version = "3.0.0", git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
pallet-balances = { version = "3.0.0", git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }

[features]
migrate = []
default = ["std", "pallet-session/historical"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"pallet-session/std",
	"pallet-avn/std",
	"sp-application-crypto/std",
	"parking_lot",
	"sp-staking/std",
	"sp-avn-common/std",
	"pallet-avn-proxy/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
