[package]
name = "pallet-ethereum-transactions"
version = "0.7.0"
authors = ["Aventus Network Services Team"]
edition = "2018"
license = "GPL-3.0"
homepage = "http://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-tier2/"
description = "Sends ethereum transactions"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
parking_lot = { version = "0.11.1", optional = true }
ethabi = { default-features = false, git = "https://github.com/Aventus-Network-Services/ethabi.git", branch = "v13.0.0-no-std-avn" }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.2.1", default-features = false }
sp-avn-common = { version = "0.7.0", default-features = false, path = "../../primitives/avn-common" }
pallet-avn = { version = "0.7.0", default-features = false, path = "../avn" }

sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-application-crypto = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }

# Optional imports for benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn", optional = true }

[dev-dependencies]
pallet-session = { version = "3.0.0", features = ["historical"], git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn", default-features = false }

[features]
migrate = []
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"parking_lot",
	"pallet-avn/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]