[package]
name = "pallet-nft-manager"
version = "0.7.0"
authors = ["Aventus Network Services Team"]
edition = "2018"
license = "GPL-3.0"
homepage = "http://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-tier2/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
hex-literal = { version = "0.2.1", default-features = false }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/Aventus-Network-Services/substrate', branch = "v3.0.0_avn" }
pallet-ethereum-events = { version = "0.7.0", default-features = false, path = "../ethereum-events" }
sp-avn-common = { version = "0.7.0", default-features = false, path = "../../primitives/avn-common" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn" }
pallet-avn = { version = "0.7.0", default-features = false, path = "../avn" }

# Optional imports for benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/Aventus-Network-Services/substrate.git", branch = "v3.0.0_avn", optional = true }

[dev-dependencies]
serde = { version = "1.0.101" }
substrate-test-utils = { version = "3.0.0", git = 'https://github.com/Aventus-Network-Services/substrate', branch = "v3.0.0_avn" }
parking_lot = { version = "0.11.1" }
sp-io = { version = "3.0.0", default-features = false, git = 'https://github.com/Aventus-Network-Services/substrate', branch = "v3.0.0_avn" }
sp-keystore = { version = "0.9.0", git = "https://github.com/Aventus-Network-Services/substrate", branch = "v3.0.0_avn" }
hex-literal = { version = "0.2.1", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-avn/std',
    'pallet-ethereum-events/std',
    'sp-avn-common/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
